# rust-samplerate

./: .travis.yml  Cargo.toml  README.md
examples/: simple.rs  stream-into.rs
src/: converter_type.rs  error.rs  lib.rs  samplerate.rs  sanity_test.rs
