[package]
name = "samplerate"
version = "0.2.0"
authors = ["Frederick Gnodtke <frederick@gnodtke.net>"]
readme = "README.md"
categories = ["multimedia::audio"]
description = "A library based on libsamplerate for converting samplerates"
repository = "https://github.com/Prior99/rust-samplerate"
keywords = ["audio", "samplerate"]
license = "BSD-2-Clause"

[dependencies]
libsamplerate-sys = { version = "0.1.5", optional = true }
libsamplerate = { version = "0.1.0", optional = true }

[features]
default = ["pure-rust"]
pure-rust = ["libsamplerate"]
sys = ["libsamplerate-sys"]

[dev-dependencies]
hound = "3.4"
